# solrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: grant-tag.yml  grant_tag_solrust.yml  publish-solrust-derive-internals.yml  publish-solrust-derive.yml  publish-solrust.yml  publish_solrust.yml  test.yml
solrust/: Cargo.toml
solrust/src/: client.rs  lib.rs  prelude.rs  querybuilder.rs  types.rs
solrust/src/client/: core.rs  solr.rs
solrust/src/querybuilder/: common.rs  dismax.rs  edismax.rs  facet.rs  q.rs  sanitizer.rs  sort.rs  standard.rs
solrust/src/types/: datetime.rs  response.rs
solrust_derive/: Cargo.toml
solrust_derive/src/: lib.rs
solrust_derive_internals/: Cargo.toml
solrust_derive_internals/src/: lib.rs
