[package]
edition = "2021"
name = "solrust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
once_cell = "1.17.0"
regex = "1.7.1"
solrust_derive = {path = "../solrust_derive", version = "0.1.0"}
solrust_derive_internals = {path = "../solrust_derive_internals", version = "0.1.0"}
