[package]
authors = ["fjnkt98 <fjnkt98@gmail.com>"]
description = "Solr Client for Rust"
edition = "2021"
license = "Apache-2.0"
name = "solrust"
repository = "https://github.com/fjnkt98/solrust"
version = "0.1.6"

[dependencies]
chrono = {version = "^0.4", features = ["serde"]}
chrono-tz = "^0.8.1"
itertools = "^0.10.5"
once_cell = "^1.17.0"
regex = "^1.7.1"
reqwest = {version = "0.11.13", features = ["json"]}
serde = {version = "^1.0.148", features = ["derive"]}
serde_json = "^1.0.89"
serde_with = "^2.2.0"
solrust_derive = "0.1.0"
solrust_derive_internals = "0.1.0"
thiserror = "1.0.38"
tracing = "^0.1.37"
tracing-subscriber = {version = "^0.3.16", features = ["env-filter"]}
url = "^2.3.1"

[dev-dependencies]
tokio = {version = "^1.23", features = ["macros"]}
tokio-stream = "^0.1.11"
